<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReservations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="225dp" />

    <TextView
        android:id="@+id/textViewNoRoomReservations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:text="@string/no_room_reservations"
        android:textAlignment="center"
        android:textSize="32sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/reserveRoom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNoRoomReservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/make_room_reservation"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnRoomRate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="review room" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Headers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_room_reservations" />

</androidx.constraintlayout.widget.ConstraintLayout>